name:                servant-display
version:             0.1.0.0
synopsis:            Reactive Web Applications with servant and reflex.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Display
                     , Servant.Common.Req
                     , Servant.Common.Uri
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , bytestring == 0.10.*
                     , text == 1.2.*
                     , containers == 0.5.*
                     , uri-bytestring == 0.2.*
                     , http-api-data == 0.2.*
                     , aeson == 0.11.*
                     , servant == 0.7.*
                     , reflex == 0.5.*
                     , reflex-dom == 0.4.*
                     , ghcjs-dom == 0.2.*
                     , ghcjs-base == 0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable servant-display
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.10
                     , text == 1.2.*
                     , servant == 0.7.1
                     , uri-bytestring == 0.2.*
                     , reflex-dom == 0.4.*
                     , servant-display
  hs-source-dirs:      app
  default-language: Haskell2010